--- a/app/views/about.html
+++ b/app/views/about.html
@@ -53,10 +53,16 @@
                   </table> 
     <h4>Equation</h4>
     <div class="row">
-      <span style="margin: 15px;" mathjax-bind="formulaGeneric"></span> 
-      <div><br>
-      <span style="margin: 15px;" mathjax-bind="formula"></span> 
-      </div>
+      <!-- <span style="margin: 15px;" mathjax-bind="formulaGeneric"></span>  -->
+      <!-- <div><br> -->
+      <!-- <span style="margin: 15px;" mathjax-bind="formula"></span>  -->
+      <!-- </div> -->
+      <div> (Patient Mass * User Adjusted Dose ) / Drug Formulation  = Volume. </div>
+      <div> Dimensional Analysis: (kg * mmol/kg)/(mmol/mL) = mL
+      <!-- {{pWeight}} <span ng-if="pUnitkg">kg</span> <span ng-if="!pUnitkg">lb * 0.453592 kg/lb</span> {{$scope.pUnitN}} * {{drugDoseUser}} mmol/kg )/ {{drugForm}} mmol/mL = {{dose}} mL <span class="glyphicon glyphicon-arrow-right"></span>  {{dose | number: fractionSize }} mL.
+
+                        (If the dose is &lt; 5 mL we round to the tenths place, otherwise the ones.) -->
+                        
       
 
     </div>
