--- a/app/views/main.html
+++ b/app/views/main.html
@@ -125,8 +125,8 @@
                       <a class="btn btn-info btn-sm" href="javascript:" ng-click="showCalc()" ng-hide="showCalc">Show Calculation Details</a>
                       <div class="well" ng-show="showCalc">
                         <h4> Dose Calculation Equation for {{drugSelection}} : </h4>
-                        <div class="row"><span style="margin: 15px;"  mathjax-bind="formula"></span></div><br>
-                        <div class="row"><span style="margin: 15px;" mathjax-bind="liveformula"></span></div>
+                        <!-- <div class="row"><span style="margin: 15px;"  mathjax-bind="formula"></span></div><br> -->
+                        <!-- <div class="row"><span style="margin: 15px;" mathjax-bind="liveformula"></span></div> -->
                         
                         Formulation for {{drugSelection}} is {{drugForm}} mmol/ml. The selected dose is {{drugDoseUser}} mmol/kg. <br>
                         <span ng-if="!pUnitkg">Given 1 lb = 0.453592 kg,</span>
